tests/errors/dispatch-wrong.au
class Class {
}

def (self: Class) init() {
}

init("A");